tests/functional/cases/pass/test_extends_consistency.coil
test: {
  a: { x: 1 }
  b: { @extends: ..a }
  a.y: 2
}

expected: {
  a.x: 1
  a.y: 2
  b.x: 1
}
